// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer should render H1 tag if depth of 1 1`] = `
<h1
  className="root"
  id="heading"
>
  <a
    className="heading heading1"
    href="/heading"
  >
    Heading
  </a>
  <div
    className="toolbar"
  />
</h1>
`;

exports[`renderer should render H3 tag for depth of 3 1`] = `
<h3
  className="root"
  id="heading"
>
  <a
    className="heading heading3"
    href="/heading"
  >
    Heading
  </a>
  <div
    className="toolbar"
  />
</h3>
`;

exports[`renderer should render H6 tag if depth is over 6 1`] = `
<h6
  className="root"
  id="heading"
>
  <a
    className="heading heading6"
    href="/heading"
  >
    Heading
  </a>
  <div
    className="toolbar"
  />
</h6>
`;

exports[`renderer should render heading with deprecated styles 1`] = `
<h3
  className="root"
  id="heading"
>
  <a
    className="heading heading3 isDeprecated"
    href="/heading"
  >
    Heading
  </a>
  <div
    className="toolbar"
  />
</h3>
`;

exports[`should pass props to slots 1`] = `
<SectionHeadingRenderer
  classes={
    Object {
      ".rsg--heading-1:hover, .rsg--heading-1:active": "rsg--heading-1:hover, .rsg--heading-1:active",
      "heading": "rsg--heading-1",
      "heading1": "rsg--heading1-2",
      "heading2": "rsg--heading2-3",
      "heading3": "rsg--heading3-4",
      "heading4": "rsg--heading4-5",
      "heading5": "rsg--heading5-6",
      "heading6": "rsg--heading6-7",
      "isDeprecated": "rsg--isDeprecated-8",
      "root": "rsg--root-0",
      "toolbar": "rsg--toolbar-9",
    }
  }
  depth={1}
  href="/heading"
  id="heading"
  slotName="slot"
  slotProps={
    Object {
      "bar": "baz",
      "foo": 1,
    }
  }
>
  Heading
</SectionHeadingRenderer>
`;
